# teoria-computacao-lab1

./: .cabal  .gitignore  .latexmkrc  Main.hs  NFA-in.YAML  README.md  flake.nix  git-init.sh  git-sync.sh  init.git.sh  input.yaml  lab1.aux  lab1.cabal  lab1.fdb_latexmk  lab1.fls  lab1.lof  lab1.toc  lab1_part2_regex.hs  main.hs  output.yaml  regex_01.yaml  regex_11.yaml  regext_out.yaml  run.sh  run2.sh  shell.nix  sync.git.sh  {-# LANGUAGE OverloadedStrings #-}.hs
.claude/: settings.json
Exec/: NFAe_to_DFA.sh  dfa_batch.sh  regex_batch.sh  rgx_to_dfa.sh
Exec_Git/: init.git.sh
Files/DFA/: nfae_02.yaml  nfae_04.yaml  nfae_06.yaml  nfae_08.yaml  nfae_10.yaml  nfae_simple.yaml
Files/NFA/: nfae_02.yaml  nfae_04.yaml  nfae_06.yaml  nfae_08.yaml  nfae_10.yaml  result_nfa.yaml
Files/NFAe/: nfae_02.yaml  nfae_04.yaml  nfae_06.yaml  nfae_08.yaml  nfae_10.yaml  nfae_complex.yaml  nfae_exemple.yaml
Files/REGEX/: regex_3.txt  regex_5.txt
Files/REGEX_DFA/: regex_1.yaml  regex_2.yaml  regex_3.yaml  regex_4.yaml  regex_5.yaml
Files/REGEX_NFA/: regex_1.yaml  regex_2.yaml  regex_3.yaml  regex_4.yaml  regex_5.yaml
doc/: lab1.tex
doc_pdf/: .latexmkrc  ifes8.cls  lab1.tex  pdf.sh
input/: Exemplo.yaml  nfae_complex.yaml  nfae_simple.yaml
output/REGEX_DFA/: result.yaml
output/REGEX_NFA/: result.yaml
src/: Main.hs  Regex.hs
